--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -32,10 +32,10 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.18 <date>2020</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -57,7 +57,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2022-03-18</date>
+                <date>2022-07-14</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh192" type="text">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-07T09:48:05.418Z" user="admin">07/07/2022 09:48:05</note>
+                                <note type="lastUpdated" date-time="2022-07-14T14:05:33.635Z" user="admin">14/07/2022 14:05:33</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -117,6 +117,8 @@
                                 <note type="updated" update="translation-status" value="2" date-time="2022-04-07T08:01:46.249Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.17" date-time="2022-04-07T08:01:46.249Z" user="line-tofte">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="0.0.18" date-time="2022-07-07T09:47:57.82Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2022-07-14T14:05:25.868Z" user="martina-cotter">1</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-14T14:05:25.868Z" user="martina-cotter">First published version</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -141,14 +143,14 @@ Notes
                                         Kṣemavatī explains that her worldly position is the fruit of
                                         the tree of her previous good deeds. The remainder of the
                                         sūtra describes how one’s good actions can eventually lead
-                                        to buddhahood, and it concludes with a prophecy for the
+                                        to buddhahood, and it concludes with a prophecy of the
                                         queen’s future awakening.</p>
                         </div>
                         <div type="acknowledgment">
                                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                                 <milestone unit="chunk" xml:id="UT22084-061-012-2"/>
                                 <p tid="4">Translated by the Subhashita Translation Group. The
-                                        translation was produced by Benjamin Ewing who also wrote
+                                        translation was produced by Benjamin Ewing, who also wrote
                                         the introduction. Lowell Cook checked the translation
                                         against the Tibetan and edited the text. </p>
                                 <milestone unit="chunk" xml:id="UT22084-061-012-3"/>
@@ -170,7 +172,7 @@ Notes
                                                 display of royal jewelry. The Buddha asks the queen,
                                                 in a seemingly playful way, for the name of the tree
                                                 that produced the magnificent fruit that she is
-                                                wearing. Queen Kṣemavatī continues the metaphor by
+                                                wearing. Queen Kṣemavatī continues the analogy by
                                                 describing her jewelry and her current station in
                                                 life as the “fruit” borne by the “tree” of her past
                                                 good deeds accumulated over lifetimes. This fruit
@@ -197,10 +199,9 @@ Notes
                                                 her book <title xml:lang="en">Women in
                                                   Buddhism</title>, Diana Paul identifies three ways
                                                 that Mahāyāna sūtras deal with the question of
-                                                female awakening: some deny the possibility of
-                                                awakening for women, some describe a lesser type of
-                                                awakening for women, and some grant women the
-                                                potential for full awakening.<note place="end" xml:id="UT22084-061-012-8">Paul 1979, p.
+                                                female buddhahood: some deny the possibility of
+                                                buddhahood in a female body, some accept women as "lower-stage" bodhisattvas, and some grant women the
+                                                potential for being "advanced" bodhisattvas whose buddhahood is "imminent."<note place="end" xml:id="UT22084-061-012-8">Paul 1979, p.
                                                   169</note> With its assertion that Queen Kṣemavatī
                                                 must be reborn as a man in order to continue her
                                                 spiritual development, <title xml:lang="en">The
@@ -232,17 +233,16 @@ Notes
                                                 excerpts, and by Peter Skilling in 2021.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-11"/>
                                         <p tid="13">The English translation presented here was
-                                                prepared based on the Degé (<foreign xml:lang="Bo-Ltn">sde dge</foreign>) Kangyur
+                                                prepared based on the Degé Kangyur
                                                 version of the text in consultation with the Stok
-                                                Palace manuscript and the Pedurma (<foreign xml:lang="Bo-Ltn">dpe bsdur ma</foreign>)
-                                                comparative edition. </p>
+                                                Palace manuscript and the Comparative Edition (<foreign xml:lang="Bo-Ltn">dpe bsdur ma</foreign>). </p>
                                 </div>
                         </div>
                 </front>
                 <body>
                         <div type="translation">
                                 <head type="translation" tid="14">The Translation</head>
-                                <head type="titleHon" tid="15">The Noble Great Vehicle Sūtra</head>
+                                <head type="titleHon" tid="15">The Noble Mahāyāna Sūtra</head>
                                 <head type="titleMain" tid="16">The Prophecy of Kṣemavatī</head>
                                 <div type="section" xml:id="UT22084-061-012-section-1">
                                         <milestone unit="chunk" xml:id="UT22084-061-012-14"/>
@@ -253,7 +253,7 @@ Notes
                                         <p tid="65">
                                                 Thus did I hear at
                                                 one time. The Blessed One was residing in Rājagṛha
-                                                on Vulture Peak Mountain together with a large
+                                                on Vulture Peak together with a large
                                                 monastic congregation of twenty thousand monks and
                                                 many bodhisattva great beings including Maitreya and
                                                 Mañjuśrī. <ref cRef="F.244.a" type="folio" xml:id="UT22084-061-012-97"/> At dawn, the Blessed
@@ -272,7 +272,7 @@ Notes
                                                 bodhisattva great being Maitreya seated themselves
                                                 on the seats that had been prepared for them, and
                                                 Kṣemavatī, bedecked in all her jewelry, bowed her
-                                                head to their feet. So that she might hear teachings
+                                                head at their feet. So that she might hear teachings
                                                 on the Dharma, she sat before the Blessed One with
                                                 great respect and reverence for him.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-15"/>
@@ -308,7 +308,7 @@ Notes
                                                 <l>“This very same fruit tree</l>
                                                 <l>Belongs to disciples of the Buddha.</l>
                                                 <l>Those who wish to obtain the wisdom of a
-                                                  Buddha</l>
+                                                  buddha</l>
                                                 <l>Sit before it in order to awaken.</l>
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-20"/>
@@ -337,8 +337,8 @@ Notes
                                         <lg tid="29">
                                                 <l>“Just like trees</l>
                                                 <l>Rooted in the mountains</l>
-                                                <l>With outstretched limbs and leaves,</l>
-                                                <l>They spread far and wide without moving.</l>
+                                                <l>Have outstretched limbs and leaves</l>
+                                                <l>That they spread far and wide without moving,</l>
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-24"/>
                                         <lg tid="30">
@@ -350,7 +350,7 @@ Notes
                                         <milestone unit="chunk" xml:id="UT22084-061-012-25"/>
                                         <lg tid="31">
                                                 <l>“Guide,<note place="end" xml:id="UT22084-061-012-26"> Reading <foreign xml:lang="Bo-Ltn" type="term">’dren pa</foreign>
-                                                  from K<hi rend="subscript">Y</hi>, J, K,C, H, S in
+                                                  from K<hi rend="subscript">Y</hi>, J, K, C, H, S in
                                                   place of <foreign xml:lang="Bo-Ltn" type="term">’dren pa’i</foreign>.</note> this tree of
                                                   merit</l>
                                                 <l>Will have many more fruits besides.</l>
@@ -390,7 +390,7 @@ Notes
                                         <p tid="36">“Blessed One,” Queen Kṣemavatī replied, “the
                                                 Blessed One has the thirty-two major and eighty
                                                 minor bodily marks of a great being, the ten powers
-                                                of the thus-gone ones, the four fearlessnesses, four
+                                                of the thus-gone ones, the four fearlessnesses, the four
                                                 special modes of knowledge, the eighteen unique
                                                 qualities of a buddha, great loving-kindness, great
                                                 compassion, great joy, and great equanimity. Where
@@ -492,7 +492,7 @@ Notes
                                                 <l>Through body, speech, and mind</l>
                                                 <l>I dedicate to awakening,</l>
                                                 <l>For the sake of the wisdom and qualities of
-                                                  buddhas. </l>
+                                                  the buddhas. </l>
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-46"/>
                                         <lg tid="51">
@@ -547,10 +547,10 @@ Notes
                                         <milestone unit="chunk" xml:id="UT22084-061-012-53"/>
                                         <p tid="58">When the Blessed One had finished speaking,
                                                 Queen Kṣemavatī, her retinue, and the entire world
-                                                with its gods, humans, asuras, and gandharvas, all
+                                                with its gods, humans, asuras, and gandharvas all
                                                 rejoiced and praised what the Buddha had taught. </p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-54"/>
-                                        <trailer tid="59">This concludes the noble Mahāyāna sūtra,
+                                        <trailer tid="59">This concludes the noble Mahāyāna sūtra
                                                   “<title xml:lang="en">The Prophecy of
                                                   Kṣemavatī</title>.”</trailer>
                                 </div>
@@ -613,7 +613,7 @@ Notes
                                         <bibl xml:id="UT22084-061-012-65">
                         <title xml:lang="Bo-Ltn">’phags pa bde ldan ma lung bstan pa zhes bya ba
                                                   theg pa chen po’i mdo</title>. Stok Palace Kangyur
-                                                vol. 74 (mdo sde,’a), folios 55.a–58.b.</bibl>
+                                                vol. 74 (mdo sde, ’a), folios 55.a–58.b.</bibl>
                                         <bibl xml:id="UT22084-061-012-62">Denkarma (<title xml:lang="Bo-Ltn">pho brang stod thang ldan dkar
                                                 gyi chos kyi ’gyur ro cog gi dkar chag</title>).
                                                 Toh 4364, Degé Tengyur vol. 206 (sna tshogs, jo),
@@ -668,7 +668,7 @@ Notes
                                                   chen po’i mtshan sum cu rtsa gnyis</term>
                                                         <term type="alternative">thirty-two major</term>
                                                   <term xml:lang="bo">སྐྱེས་བུ་ཆེན་པོའི་མཚན་སུམ་ཅུ་རྩ་གཉིས།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">dvātriṃśanmahā­puruṣa­lakṣaṇani</term>
+                                                        <term xml:lang="Sa-Ltn" status="verified">dvātriṃśanmahā­puruṣa­lakṣaṇāni</term>
                                                   <term type="definition">The thirty-two major signs
                                                   of a buddha that manifest as specific physical
                                                   attributes to indicate the perfection of the
@@ -762,7 +762,7 @@ Notes
                             <term xml:lang="bo">འཁོར་ལོས་སྒྱུར།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">cakravartin</term>
                                                   <term type="definition">Literally “wheel wielder,”
-                                                  denotes a powerful being who has control over vast
+                                                  this denotes a powerful being who has control over vast
                                                   regions.</term>
                                                 </gloss>
                                         </item>
@@ -834,8 +834,7 @@ Notes
                                                   ma</term>
                                                   <term xml:lang="bo">བདེ་ལྡན་མ།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">Kṣemavatī</term>
-                                                  <term type="definition">The mother of
-                                                  Suvarṇottamaprabhāsā, who was married to King
+                                                        <term type="definition">One of the wives of King
                                                   Bimbisāra.</term>
                                                 </gloss>
                                         </item>
@@ -898,12 +897,12 @@ Notes
                                         </item>
                                         <item>
                                                 <gloss xml:id="UT22084-061-012-95" type="place">
-                                                  <term>Vulture Peak Mountain</term>
+                                                  <term>Vulture Peak</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">bya rgod
                                                   phung po’i ri</term>
                                                   <term xml:lang="bo">བྱ་རྒོད་ཕུང་པོའི་རི།</term>
                                                         <term xml:lang="Sa-Ltn" status="verified">Gṛdhrakūṭa­parvata</term>
-                                                  <term type="definition">Name of a mountain close
+                                                  <term type="definition">Name of a hill close
                                                   to Rājagṛha. It is famous as the place where the
                                                   Buddha is said to have taught the Prajñāpāramitā
                                                   and other teachings.</term>
