--- a/translations/kangyur/placeholders/088-001_toh507,883-the_incantation_of_the_secret_relics.xml
+++ b/translations/kangyur/placeholders/088-001_toh507,883-the_incantation_of_the_secret_relics.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2021</date>
+                <edition>v 0.0.14 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-088-001"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-14T10:45:38.047Z" user="admin">14/07/2022 10:45:38</note>
+                <note type="lastUpdated" date-time="2022-07-14T14:25:07.474Z" user="admin">14/07/2022 14:25:07</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-11-01T13:40:58.125Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-11-01T13:40:58.125Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-11-08T08:44:48.238Z" user="line-tofte">3</note>
@@ -69,6 +69,8 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-07T10:01:08.969Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-07-14T10:45:30.212Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2022-07-14T10:45:30.212Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-07-14T14:24:59.638Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2022-07-14T14:24:59.638Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
