--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -32,7 +32,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-14T14:05:33.635Z" user="admin">14/07/2022 14:05:33</note>
+                                <note type="lastUpdated" date-time="2022-07-14T15:57:43.123Z" user="admin">14/07/2022 15:57:43</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -119,6 +119,7 @@
                             <note type="updated" update="text-version" value="0.0.18" date-time="2022-07-07T09:47:57.82Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1" date-time="2022-07-14T14:05:25.868Z" user="martina-cotter">1</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-14T14:05:25.868Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-14T15:57:39.185Z" user="martina-cotter">Updated error with straight apostrophes.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -200,8 +201,8 @@ Notes
                                                   Buddhism</title>, Diana Paul identifies three ways
                                                 that Mahāyāna sūtras deal with the question of
                                                 female buddhahood: some deny the possibility of
-                                                buddhahood in a female body, some accept women as "lower-stage" bodhisattvas, and some grant women the
-                                                potential for being "advanced" bodhisattvas whose buddhahood is "imminent."<note place="end" xml:id="UT22084-061-012-8">Paul 1979, p.
+                                                buddhahood in a female body, some accept women as “lower-stage” bodhisattvas, and some grant women the
+                                                potential for being “advanced” bodhisattvas whose buddhahood is “imminent.”<note place="end" xml:id="UT22084-061-012-8">Paul 1979, p.
                                                   169</note> With its assertion that Queen Kṣemavatī
                                                 must be reborn as a man in order to continue her
                                                 spiritual development, <title xml:lang="en">The
