--- a/translations/kangyur/placeholders/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/placeholders/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -14,10 +14,11 @@
                 <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <sponsor ref="sponsors.xml#sponsor-47">马珂，王晓娟</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -37,10 +38,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-03T12:15:10.119Z" user="admin">03/06/2022 12:15:10</note>
-            <note type="updated" update="translation-status" value="2.g" date-time="2019-06-27T14:16:17.494Z" user="john">2.g</note>
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:01:38.603Z" user="mike">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:38.603Z" user="mike">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-03T11:51:17.35Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-03T12:14:20.247Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-06-03T12:15:04.3Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-03T12:15:04.3Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-15T07:41:33.081Z" user="admin">15/07/2022 07:41:33</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2019-06-27T14:16:17.494Z" user="john">2.g</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:01:38.603Z" user="mike">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:38.603Z" user="mike">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-03T11:51:17.35Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-03T12:14:20.247Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-06-03T12:15:04.3Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-03T12:15:04.3Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T07:41:31.029Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
