--- a/translations/kangyur/placeholders/090-034_toh590,985-the_invincible_spell_of_usnisasitatapatra.xml
+++ b/translations/kangyur/placeholders/090-034_toh590,985-the_invincible_spell_of_usnisasitatapatra.xml
@@ -23,10 +23,10 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-090-034"/>
                 <date/>
             </publicationStmt>
@@ -51,7 +51,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-30T13:22:37.756Z" user="admin">30/05/2022 13:22:37</note>
+                <note type="lastUpdated" date-time="2022-07-15T11:54:23.182Z" user="admin">15/07/2022 11:54:23</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:46:40.495Z" user="line-tofte">3</note>
@@ -60,7 +60,7 @@
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:14:03.549Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:53:26.724Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:53:26.724Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T10:05:31.407Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:25:32.174Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:25:32.174Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:26:03.457Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:22:30.093Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:22:30.093Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T10:05:31.407Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:25:32.174Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:25:32.174Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:26:03.457Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:22:30.093Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:22:30.093Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:54:15.358Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:54:15.358Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
