--- a/translations/kangyur/placeholders/090-035_toh591-the_incantation_of_the_supremely_accomplished_great_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-035_toh591-the_incantation_of_the_supremely_accomplished_great_sitatapatra_aparajita.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-090-035"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-30T13:24:05.188Z" user="admin">30/05/2022 13:24:05</note>
+                <note type="lastUpdated" date-time="2022-07-15T11:57:03.114Z" user="admin">15/07/2022 11:57:03</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:05.962Z" user="line-tofte">3</note>
@@ -47,7 +47,7 @@
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:15:15.901Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:54:07.216Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:54:07.216Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T10:02:01.066Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:26:32.057Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:26:32.057Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:26:58.972Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:23:57.603Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:23:57.603Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T10:02:01.066Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:26:32.057Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:26:32.057Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:26:58.972Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:23:57.603Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:23:57.603Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:56:55.257Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:56:55.257Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
