--- a/translations/kangyur/placeholders/090-036_toh592,986-the_incantation_of_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-036_toh592,986-the_incantation_of_sitatapatra_aparajita.xml
@@ -23,10 +23,10 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-090-036"/>
                 <date/>
             </publicationStmt>
@@ -51,7 +51,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-30T13:26:25.716Z" user="admin">30/05/2022 13:26:25</note>
+                <note type="lastUpdated" date-time="2022-07-15T11:58:35.294Z" user="admin">15/07/2022 11:58:35</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">3</note>
@@ -60,7 +60,7 @@
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:16:24.82Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:54:41.388Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:54:41.388Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:58:58.553Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:27:58.493Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:58:58.553Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:27:58.493Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:58:27.457Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:58:27.457Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
