--- a/translations/kangyur/placeholders/090-036_toh592,986-the_incantation_of_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-036_toh592,986-the_incantation_of_sitatapatra_aparajita.xml
@@ -10,8 +10,8 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of Sitātapatrā</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryatathāgatoṣṇīṣa­sitātapatrāparājitā­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ārya­tathāgatoṣṇīṣa­sitātapatrāparājitā­nāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma de bzhin gshegs pa'i gtsug tor nas byung ba'i gdugs dkar po can gzhan gyis mi thub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gtsug tor nas byung ba'i gdugs dkar po can gzhan gyis mi thub pa zhes bya ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma de bzhin gshegs pa'i gtsug tor nas byung ba'i gdugs dkar po can gzhan gyis mi thub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gdugs dkar gyi gzungs/</title>
                 <author role="translatorMain" ref="eft:team-48"/>
                 <consultant role="projectManager" ref="eft:person-305">Stefan Mang</consultant>
@@ -21,9 +21,10 @@
                 <author role="translatorEng" ref="eft:person-319">Ryan Conlon</author>
                 <author role="translatorEng" ref="eft:person-321">Paul Thomas</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -51,16 +52,24 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T11:58:35.294Z" user="admin">15/07/2022 11:58:35</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T14:16:10.639Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:16:24.82Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:54:41.388Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:54:41.388Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:58:58.553Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:27:58.493Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:58:27.457Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:58:27.457Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-15T11:59:13.011Z" user="admin">15/07/2022 11:59:13</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T14:16:10.639Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:16:24.82Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:54:41.388Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:54:41.388Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:58:58.553Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-04-13T10:27:30.512Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:27:58.493Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-30T13:26:18.145Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:58:27.457Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:58:27.457Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T11:59:05.149Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
