--- a/translations/kangyur/placeholders/090-037_toh593-the_incantation_of_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-037_toh593-the_incantation_of_sitatapatra_aparajita.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-090-037"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-30T13:27:47.578Z" user="admin">30/05/2022 13:27:47</note>
+                <note type="lastUpdated" date-time="2022-07-15T12:00:41.232Z" user="admin">15/07/2022 12:00:41</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">3</note>
@@ -48,7 +48,7 @@
     <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:55:14.487Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:55:14.487Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:56:43.891Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-16T09:57:47.288Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-13T10:28:53.671Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-16T09:57:47.288Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-13T10:28:53.671Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
